syntax = "proto3";
package racecarweb.componentregistry.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "racecarweb/componentregistry/v1/params.proto";
import "racecarweb/componentregistry/v1/component.proto";

option go_package = "racecar-web/x/componentregistry/types";

// GenesisState defines the componentregistry module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  // components defines all registered components
  repeated Component components = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  // component_verifications defines all component verifications
  repeated ComponentVerification component_verifications = 3 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  // pairing_rules defines all component pairing rules
  repeated ComponentPairingRule pairing_rules = 4 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}